# New-mGBA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  macbuild.sh  mgba_macbuild.sh  mgba_pcbuild.sh  mgba_switchbuild.sh  win_build.bat  win_build.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
New_mGBA/: CMakeLists.txt  接口文档.md
New_mGBA/include/: main_activity.hpp
New_mGBA/include/Game/: DisplayConfig.hpp  GameRuntime.hpp  ShaderChain.hpp  common.hpp
New_mGBA/include/UI/: Img_text_cell.hpp  List_view.hpp  game_view.hpp  tab_select_game.hpp
New_mGBA/include/Utils/: ConfigManager.hpp  fileUtils.hpp  strUtils.hpp
New_mGBA/include/XMLUI/: StartPageView.hpp  template.hpp
New_mGBA/include/XMLUI/Pages/: AppPage.hpp  FileListPage.hpp
New_mGBA/src/: main.cpp
New_mGBA/src/Game/: DisplayConfig.cpp  GameRuntime.cpp  ShaderChain.cpp
New_mGBA/src/UI/: Img_text_cell.cpp  List_view.cpp  game_view.cpp  main_activity.cpp  tab_select_game.cpp
New_mGBA/src/Utils/: ConfigManager.cpp  fileUtils.cpp  strUtils.cpp  strUtils.hpp
New_mGBA/src/XMLUI/: StartPageView.cpp
New_mGBA/src/XMLUI/Pages/: AppPage.cpp  FileListPage.cpp
New_mGBA/src/XMLUI/Utils/: captioned_image.cpp
demo/include/activity/: main_activity.hpp
examples/: ConfigManagerUsage.cpp
mgbalib/: libmgba.0.10.5.dylib  libmgba.0.10.dylib  libmgba.dylib
resources/i18n/zh-Hans/: beiklive.json  demo.json
resources/xml/activity/: beiklive_main.xml
resources/xml/mgba_xml/cell/: Img_text_cell.xml
resources/xml/mgba_xml/tabs/: select_game.xml
resources/xml/mgba_xml/view/: list_view.xml
resources/xml/views/: StartPageView.xml
